// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tooltip /> > Snapshot > should match snapshot 1`] = `
<div>
  <div
    class="Tooltip_wrapper__f5whxn1"
  >
    <span>
      hover
    </span>
  </div>
</div>
`;

exports[`<Tooltip /> > Snapshot > should match snapshot 2`] = `
<div>
  <div
    class="Tooltip_wrapper__f5whxn1"
  >
    <div
      class="Tooltip_tip__f5whxn0"
    >
      Tooltip text
    </div>
    <span>
      hover
    </span>
  </div>
</div>
`;
